<resources>
    <string name="app_name">تست کرونا</string>
    <string name="return_app">بازگشت به برنامه</string>
    <string name="tv_apptest_final">نتیجه تست</string>
    <string name="tv_apptest_final1">با توجه به پاسخ های شما و بر حسب درصد.</string>
    <string name="tv2_apptest_final">شما به احتمال</string>
    <string name="tv4_apptest_final">در معرض ابتلا به ویروس کرونا هستید. چه خوب و چه بد، لطفا نتیجه این تست را جدی نگیرید و از تست استاندارد هم استفاده کنید! اگر احساس می کنید که بیمار هستید، سعی کنید از دیگران فاصله بگیرید و استراحت کنید. اگر مساله را جدی می دانید، حتما با پزشک تماس بگیرید. به هیچ وجه به صورت حضوری و قبل از هماهنگی به مراکز درمانی مراجعه نکنید.</string>
    <string name="question_1_apptest">آیا اخیرا در مکان های عمومی به مدت بیش از یک ساعت فعالیت داشته اید؟</string>
    <string name="question_2_apptest">آیا در چند روز اخیر احساس ضعف شدید داشته اید؟</string>
    <string name="question_3_apptest">آیا بیش از یک روز است که تب دارید و از دمای بدنتان کاسته نشده است؟</string>
    <string name="question_4_apptest">آیا در چند روز اخیر احساس گلودرد شدید دارید؟</string>
    <string name="question_5_apptest">آیا با فردی مشکوک به علائم سرماخوردگی ارتباط داشته اید؟</string>
    <string name="question_6_apptest">آیا در چند روز اخیر سرفه های خشک و شدید دارید؟</string>
    <string name="question_7_apptest">آیا شما دارای بیماری قلبی هستید؟</string>
    <string name="question_8_apptest">آیا شما بیماری ریوی و یا کلیوی دارید؟</string>
    <string name="question_9_apptest">آیا دیابت دارید و علارغم مصرف انسولبن همچنان با عوارض بیماری مواجه هستید؟</string>
    <string name="question_10_apptest">آیا حیوان خانگی دارید و اخیرا آن را با خود بیرون برده اید؟</string>
    <string name="question_11_apptest">آیا در طول دو هفته اخیر، حداقل یکبار از خانه خارج شده اید؟</string>
    <string name="question_12_apptest">آیا احساس می کنید که بیمار هستید؟</string>
    <string name="question_13_apptest">آیا علائم خفیفی از سرماخوردگی دارید؟</string>
    <string name="question_14_apptest">آیا در طول دو هفته اخیر از بیرون، چیزی به داخل خانه آورده اید؟</string>
    <string name="question_15_apptest">آیا در طول دو هفته اخیر لباس و یا وسایل جدیدی خریده اید؟</string>
    <string name="question_16_apptest">آیا بدن شما دارای نقض ایمنی اولیه است؟</string>
    <string name="question_17_apptest">آیا فردی از نزدیکان شما به بیماری کرونا مبتلا شده است؟</string>
    <string name="question_18_apptest">آیا در خانه از فردی مبتلا به بیماری کرونا مراقبت می کنید؟</string>
    <string name="question_19_apptest">آیا اخیرا به مراکز درمانی مراجعه کرده اید؟</string>
    <string name="question_20_apptest">آیا خودتان فکر می کنید که به بیماری کرونا مبتلا هستید؟</string>
    <string name="yes">بله</string>
    <string name="no">خیر</string>
    <string name="app_test_second_title">لطفا، با دقت به سوالات پاسخ دهید.</string>
    <string name="good_src_1">کرونا در کدام سن بیشتر قربانی می گیرد؟</string>
    <string name="good_src_2">کروناویروس</string>
    <string name="hint_name">نام خود را وارد کنید</string>
    <string name="hint_age">سن خود را وارد کنید</string>
    <string name="app_test_btn1">شروع</string>
    <string name="app_test_btn2">بازگشت</string>
    <string name="app_test_toolbar1">نام و سن خود را وارد کنید!</string>
    <string name="app_test_text1">این تست برای مراجعه کمتر شما عزیزان به مراکز درمانی و بهداشتی برای تست کروناست. درصد ارائه شده در انتهای این تست به هیچ عنوان قابل اطمینان نبوده و نمی تواند شما را مجاب به مراجعه به پزشک نماید. لذا از نتیجه تست نگران نباشید!</string>
    <string name="no_vpn_needed">برای مراجعه به این سایت ها نیازی به تغییر آی پی ندارید!</string>
    <string name="good_src_3">راههای پیشگیری از ویروس کرونا</string>
    <string name="good_src_4">درمان ویروس کرونا؛ آنچه از کووید ۱۹ نمی‌دانید!</string>
    <string name="good_src_5">مرکز آموزش کرونا</string>
    <string name="good_src_6">همه چیز درباره‌ی پیدایش، گسترش و پیشگیری از ویروس کرونا</string>
    <string name="good_src_7">آمار کرونا در ایران</string>
    <string name="good_src">منابع مفید</string>
    <string name="good_src1">منابع استفاده شده در نرم افزار؛ بر روی آن ها کلیک کنید! </string>
    <string name="tv_amar_tab">در این روز ها که شیوع بیماری در نقطه ی اوج خود قرار دارد، دانستن آمار بهبود یافتگان و یا مرگ و میر بسیار مهم است. همانطور که گفتیم، ۱۷ درصد از بیماران در ایران فوت میکنند که این آمار بسیار آزار دهنده است. تا این لحظه که در حال تایپ این مطلب هستم، ۲۳,۰۴۹ نفر به طور رسمی به این ویروس آلوده شده اند. متاسفانه ۱,۸۱۲ نفر فوت کردند و خوشبختانه ۸,۳۷۶ نفر به طور کامل بهبود یافتند. همانطور که متوجه شدید درصد اعلامی ما از مرگ و میر از تعداد نفراتی است که وضعیت نهایی آن ها تایید شده است. دقت کنید که درصد کلی مرگ و میر در ایران تا کنون ۷ درصد بوده که باز هم قابل توجه است. </string>
    <string name="name_home_tab">کرونا</string>
    <string name="tv2_amar_tab">آمار لحظه ای</string>
    <string name="text1_home_tab">نوع ویروس :</string>
    <string name="notice1_home_tab">توجه : درصد ارائه شده نسبت مرگ و میر به بهبودی ها است . درصد به دست آمده، از آمار رسمی جمهوری اسلامی ایران است.</string>
    <string name="text1a_home_tab">کرونا</string>
    <string name="text2_home_tab">وضعیت انتشار :</string>
    <string name="text2a_home_tab">پاندِمی</string>
    <string name="text3_home_tab">نام بیماری :</string>
    <string name="text3a_home_tab">(COVID-19)</string>
    <string name="text4_home_tab">قدرت انتقال ویروس :</string>
    <string name="text4a_home_tab">بسیار بالا</string>
    <string name="text5_home_tab">پایان پیشبینی شده این وضعیت :</string>
    <string name="text5a_home_tab">شهریور ماه</string>
    <string name="text6_home_tab">روش درمان فعلی :</string>
    <string name="text6a_home_tab">مراقبت های بالینی</string>
    <string name="text7_home_tab">درصد مرگ و میر ناشی از بیماری :</string>
    <string name="text7a_home_tab"> ۱۷ درصد</string>
    <string name="text8_home_tab">سطح اطلاعات در رابطه با ویروس :</string>
    <string name="text8a_home_tab">بسیار پایین</string>
    <string name="loading_info"> زندگی بانشاط و سالم</string>
    <string name="group_name">Severe!</string>
    <string name="by">by</string>
    <string name="tv_test1_tab">نسخه استاندارد نیازمند دسترسی به اینترنت است.</string>
    <string name="creator_name">Mahdi Davoodi</string>
    <string name="tab_main_main">خانه</string>
    <string name="tab_coronatest_main">تست کرونا</string>
    <string name="tab_amar_main">آمار</string>
    <string name="tab_aboutvirus_main">کرونا ویروس ها</string>
    <string name="tab_pishgiri_main">پیشگیری</string>
    <string name="tab_darman_main">درمان</string>
    <string name="tab_aboutus_main">درباره ی ما</string>
    <string name="CoronaVirus">CoronaVirus</string>
    <string name="Covid_19">(COVID-19)</string>
    <string name="from">from</string>
    <string name="more_info">اطلاعات بیشتر</string>
    <string name="tv_aboutus_tab">در ابتدا، از شما برای استفاده از این نرم افزار تشکر می کنم. نرم افزاری که اکنون در دست دارید اولین نسخه ارائه شده از اولین نرم افزار من است؛ لذا برای هرگونه کم و کاستی و مشکل درون نرم افزار عذر خواهی می کنم و امیدوارم با کمک شما دوستان گرامی، نرم افزار و همچنین دانش خود را ارتقا دهم . هدف از این پروژه فقط به موضوع کرونا محدود نخواهد شد و در آینده ای نزدیک شاهد بروزرسانی های جالبی خواهید بود .  این نرم افزار به صورت کامل راهنمای سلامت زندگی شما خواهد شد و با تست های روانشناسی شما را شگفت زده خواهد کرد. منتظر ما باشید! </string>
    <string name="tv_aboutus_thanks_tab">ارادتمند شما، مهدی داودی</string>
    <string name="year">© 2020</string>
    <string name="tv_darmaan_tab">در حال حاضر هیچ واکسنی برای ویروس کرونا وجود ندارد. حتی داروهای ضدویروس هم برای آن وجود ندارند که بتوانند ویروس را در بدن بیماران از بین ببرند. وقتی یک بیمار دچار وضعیت حادی می‌شود، تنها کاری که می‌توان برای او انجام داد این است که او را زنده نگاه داریم تا سیستم ایمنی وی بتواند راه مقابله با ویروس را بیابد. به همین دلیل هم مثلا دستگاه‌های کمک تنفسی استفاده می‌شوند که ضعف اکسیژن‌رسانی را در بدن بیمار جبران کنند و نگذارند اندام‌های وی دچار آسیب شوند. در ضمن اگر بتوان به نحوی جلوی واکنش تند سیستم ایمنی و همچنین عفونت باکتریایی را که در نتیجه آسیب به بافت پوششی ریه ایجاد می‌شود، گرفت، می‌توان شانس زنده ماندن بیمار را افزایش داد. در حال حاضر از بین داروهای مختلف که در کشورهای مختلف درگیر ویروس کرونا برای کنترل بیماری استفاده می‌شوند، دو دارو تا به امروز نتایج خوبی داشته‌اند.</string>
    <string name="tv_testname_tab">آزمایش کرونا</string>
    <string name="tv2_darmaan_tab">هیدروکسی کلروکین</string>
    <string name="tv4_darmaan_tab">آزیترومایسین</string>
    <string name="tv6_darmaan_tab">هشدار! مطالبی در اینجا گفتیم صرفا جنبه آموزشی دارد. اگر خود شما یا آشنایان شما به ویروس کرونا مبتلا هستند، به‌هیچ‌وجه به‌صورت خودسر این داروها را مصرف نکنید. توجه داشته باشید که این داروها هنوز در حال آزمایش هستند.</string>
    <string name="tv5_darmaan_tab">آزیترومایسین (Azithromycin) یک نوع آنتی‌بیوتیک است که گاهی وقت‌ها برای رفع گلودرد در سرماخوردگی هم تجویز می‌شود. آنتی‌بیوتیک‌ها فقط برای از بین بردن باکتری‌ها به کار می‌روند و تاثیری روی ویروس‌ها ندارند. آزیترومایسین می‌تواند باعث کاهش عفونت باکتریایی ناشی از آسیب به بافت ریه شود. در نهایت وقتی با استفاده از این داروها، سیستم ایمنی آرام شد، به بافت‌های سالم آسیب نزد و خودش رو هم تضعیف نکرد و عفونت باکتریایی ایجادشده هم با آزیترومایسین کنترل شد، بدن بیمار زنده می‌ماند و انرژی و زمان کافی برای پیدا کردن و ساخت آنتی‌بادی‌های مناسب برای کشتن ویروس کرونا را خواهد داشت که باعث درمان کامل وی‌ می‌شود.</string>
    <string name="tv3_darmaan_tab">هیدروکسی کلروکین (Hydroxychloroquine) یک داروی ضدانگل است که برای درمان انگل مالاریا به کار می‌رود؛ اما باعث تضعیف سیستم ایمنی هم می‌شود. هیدروکسی کلروکین با تضعیف سیستم ایمنی مانع از درگیر شدن کل سیستم ایمنی و ورود همه نیروهای آن به ریه‌ها می‌گردد. هیدروکسی کلروکین به‌نوعی سیستم ایمنی را آرام می‌کند. در نتیجه باعث کاهش آسیب سیستم ایمنی به ریه‌ها می‌شود. همچنین ترشح مایعات در ریه‌ها را کاهش می‌دهد و بیمار بهتر می‌تواند نفس بکشد.</string>
    <string name="tv_test_tab">در این صفحه شما دو انتخاب دارید! اولی تست استاندارد و تعیین شده توسط سازمان نظام پزشکی کشور است و دومی تست جامع خود نرم افزار . پیشنهاد ما این است که هر دو تست را انجام دهید.</string>
    <string name="tv_ib_app_test_tab">نرم افزار</string>
    <string name="tv_ib_google_test_tab">استاندارد</string>
    <string name="tv_pishgiri_tab">در حال حاضر هیچ واکسنی برای محافظت از شما در برابر ویروس کرونا موجود نیست. ممکن است با انجام موارد زیر بتوانید خطر ابتلا به بیماری را کاهش دهید.</string>
    <string name="tv2_pishgiri_tab">دستان خود را حداقل به مدت ۲۰ ثانیه با صابون و آب بشویید.</string>
    <string name="tv3_pishgiri_tab">از دست زدن به چشم ، بینی یا دهان خودداری کنید.</string>
    <string name="tv4_pishgiri_tab">از تماس نزدیک با افرادی که مریض هستند خودداری کنید. </string>
    <string name="tv5_pishgiri_tab">هنگام سرفه یا عطسه دهان خود را با یک دستمال بپوشانید ، سپس دستمال را درون سطل زباله بیندازید. </string>
    <string name="tv6_pishgiri_tab">اشیاء و سطوحی که اغلب لمس می شود را تمیز و ضد عفونی کنید.</string>
    <string name="tv7_pishgiri_tab">اگر بیمار هستید و فکر می کنید ممکن است علت آن مسافرت به منطقه آلوده به ویروس کرونا یا تماس با شخصی باشد که در آنجا بوده است ، باید به یک پزشک اطلاع دهید و به دنبال درمان زودهنگام باشید. </string>
    <string name="tv8_pishgiri_tab">در حالی که بیمار هستید در خانه بمانید.</string>
    <string name="tv9_pishgiri_tab">از تماس نزدیک با دیگران خودداری کنید.</string>
    <string name="tv11_pishgiri_tab">#در_خانه_میمانیم</string>
    <string name="internet_need">نیازمند دسترسی به اینترنت</string>
    <string name="googletest_toolbar_title">تایید شده توسط نظام پزشکی کشور</string>
</resources>