<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layoutDirection="ltr"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Space
            android:layout_width="match_parent"
            android:layout_height="40dp" />

        <TextView
            android:id="@+id/tv_home_one"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="casual"
            android:gravity="center"
            android:text="@string/name_home_tab"
            android:textAlignment="center"
            android:textColor="#17DB1F"
            android:textDirection="rtl"
            android:textSize="40sp"
            android:textStyle="bold|italic" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/text3a_home_tab"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/text3a_home_tab"
                    android:textAlignment="center"
                    android:textColor="#C7BEBE"
                    android:textDirection="ltr" />

                <TextView
                    android:id="@+id/text3_home_tab"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="casual"
                    android:text="@string/text3_home_tab"
                    android:textAlignment="center"
                    android:textColor="#17DB1F"
                    android:textDirection="rtl"
                    android:textSize="14sp"
                    android:textStyle="bold|italic" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/text1a_home_tab"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/text1a_home_tab"
                    android:textAlignment="center"
                    android:textColor="#C7BEBE"
                    android:textDirection="rtl" />

                <TextView
                    android:id="@+id/text1_home_tab"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="casual"
                    android:text="@string/text1_home_tab"
                    android:textAlignment="center"
                    android:textColor="#17DB1F"
                    android:textDirection="rtl"
                    android:textSize="14sp"
                    android:textStyle="bold|italic" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/text2a_home_tab"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/text2a_home_tab"
                    android:textAlignment="center"
                    android:textColor="#E91E63"
                    android:textDirection="rtl" />

                <TextView
                    android:id="@+id/text2_home_tab"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="casual"
                    android:text="@string/text2_home_tab"
                    android:textAlignment="center"
                    android:textColor="#17DB1F"
                    android:textDirection="rtl"
                    android:textSize="14sp"
                    android:textStyle="bold|italic" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/text6a_home_tab"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/text6a_home_tab"
                    android:textAlignment="center"
                    android:textColor="#C7BEBE"
                    android:textDirection="rtl" />

                <TextView
                    android:id="@+id/text6_home_tab"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="casual"
                    android:text="@string/text6_home_tab"
                    android:textAlignment="center"
                    android:textColor="#17DB1F"
                    android:textDirection="rtl"
                    android:textSize="15sp"
                    android:textStyle="bold|italic" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/text4a_home_tab"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/text4a_home_tab"
                    android:textAlignment="center"
                    android:textColor="#C7BEBE"
                    android:textDirection="rtl" />

                <TextView
                    android:id="@+id/text4_home_tab"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="casual"
                    android:text="@string/text4_home_tab"
                    android:textAlignment="center"
                    android:textColor="#17DB1F"
                    android:textDirection="rtl"
                    android:textSize="15sp"
                    android:textStyle="bold|italic" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/text5a_home_tab"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/text5a_home_tab"
                    android:textAlignment="center"
                    android:textColor="#C7BEBE"
                    android:textDirection="rtl" />

                <TextView
                    android:id="@+id/text5_home_tab"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="casual"
                    android:text="@string/text5_home_tab"
                    android:textAlignment="center"
                    android:textColor="#17DB1F"
                    android:textDirection="rtl"
                    android:textSize="15sp"
                    android:textStyle="bold|italic" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/text7a_home_tab"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/text7a_home_tab"
                    android:textAlignment="center"
                    android:textColor="#C7BEBE"
                    android:textDirection="rtl" />

                <TextView
                    android:id="@+id/text7_home_tab"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="casual"
                    android:text="@string/text7_home_tab"
                    android:textAlignment="center"
                    android:textColor="#17DB1F"
                    android:textDirection="rtl"
                    android:textSize="15sp"
                    android:textStyle="bold|italic" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/text8a_home_tab"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/text8a_home_tab"
                    android:textAlignment="center"
                    android:textColor="#C7BEBE"
                    android:textDirection="rtl" />

                <TextView
                    android:id="@+id/text8_home_tab"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="casual"
                    android:text="@string/text8_home_tab"
                    android:textAlignment="center"
                    android:textColor="#17DB1F"
                    android:textDirection="rtl"
                    android:textSize="15sp"
                    android:textStyle="bold|italic" />
            </LinearLayout>
        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <TextView
            android:id="@+id/notice_home_tab"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="casual"
            android:text="@string/notice1_home_tab"
            android:textAlignment="center"
            android:textColor="#E91E63"
            android:textDirection="rtl"
            android:textStyle="bold|italic" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <Button
            android:id="@+id/btn_home_tab"
            android:layout_width="wrap_content"
            android:onClick="btnHomeOnClick"
            android:layout_height="wrap_content"
            android:layout_gravity="center|center_horizontal|center_vertical"
            android:background="#E91E63"
            android:fontFamily="casual"
            android:text="@string/good_src"
            android:textAlignment="center"
            android:textColor="#001303"
            android:textDirection="rtl"
            android:textStyle="bold|italic" />

    </LinearLayout>
</androidx.core.widget.NestedScrollView>