<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layoutDirection="ltr"
    android:layout_height="match_parent"
    tools:context=".LoadingActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layoutDirection="ltr"
        android:layout_height="match_parent"
        android:background="#001303"
        android:orientation="vertical">

        <Space
            android:layout_width="match_parent"
            android:layout_height="120dp" />

        <TextView
            android:id="@+id/tv_loading_gpname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layoutDirection="ltr"
            android:fontFamily="sans-serif-smallcaps"
            android:gravity="center"
            android:text="@string/group_name"
            android:textAlignment="center"
            android:textColor="#17DB1F"
            android:textDirection="ltr"
            android:textSize="70sp"
            android:textStyle="bold|italic" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp" />

        <TextView
            android:id="@+id/tv_loading_info"
            android:layout_width="match_parent"
            android:layoutDirection="ltr"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-condensed-medium"
            android:text="@string/loading_info"
            android:textAlignment="center"
            android:textColor="#F3D5CFCF"
            android:textDirection="rtl"
            android:textSize="20sp"
            android:textStyle="bold|italic" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layoutDirection="ltr"
            android:layout_height="match_parent"
            android:gravity="bottom"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_loading_by"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/by"
                android:textAlignment="textEnd"
                android:textColor="#F3D5CFCF"
                android:textDirection="ltr"
                android:textStyle="bold|italic" />

            <TextView
                android:id="@+id/tv_loading_creatorname2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="sans-serif"
                android:text="@string/creator_name"
                android:textAlignment="textStart"
                android:textColor="#17DB1F"
                android:textDirection="ltr"
                android:textStyle="italic" />
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>